1567.	[bug]		marcin
	Kea HTTP client now always includes Host header in all HTTP requests.
	The Host header is required in all HTTP/1.1 requests. This corrects
	the problem whereby HA peers were unable to communicate via reverse
	HTTP proxy because the proxy was responding with Bad Request status
	when no Host header was included.
	(Gitlab #360,!305, git ddb6dbf4cf63e98d3954c5d46e0311abc4fd6cfc)

1566.	[func]		tmark
	kea-dhcp6 can now be configured to calculate values to
	send to clients for T1 and T2 times. Prior to this
	it was only possibly to specify explicit values.
	(Gitlab #365,!296, git 144b83a84c836d6ff17620b35cb74f830b13c2eb)

1565.	[func]		marcin
	MySQL Config Backend returns server tags associated with the
	configuration elements.
	(Gitlab #579,!309, git 1e2648df047fe964e8ad3e9deb1c85eea32b1219)

1564.	[func]		fdupont
	Implemented two new commands to manage subnets:	subnet4-update and
	subnet6-update. They allow an update of existing subnets
	configuration.
	(Gitlab #465,!265, git 71eb9188033f81dab56fc5a847a39f5497398b62)

1563.	[bug]		razvan
	Fixed compilation of google benchmarks.
	(Gitlab #520,!260, git 11aa890d30ecce5518b9f0bad389feea6be78167)

1562.	[bug]		marcin
	Corrected a bug whereby the DHCP server would trigger a segfault
	upon termination when MySQL configuration backend was in use.
	(Gitlab #571,!306, git 705e7bb6dd27ec90dd2807d4aac0905e3cb13de4)

1561.	[func]		tmark
	kea-dhcp6 now automatically deletes configuration elements
	that have been deleted from configuration backends.
	(Gitlab #566,!304, git 2e85376f1b57187b822c662144380e04372cffff)

1560.	[bug]		fdupont
	kea-dhcp4 now permits option code values of 0 and 255 for
	options defined in option spaces other than the "dhcp4" space.
	(Gitlab #564,!300, git 7a0a0b84d91893f08c0ee6f236daa05bede65166)

1559.	[func]		fdupont
	Added DHCPv6 support to the MySQL Config Backend hook.
	(Gitlab #397,!244, git 980091ecd717e41a61f0d7f6808213e450647d8e)

1558.	[func]		tmark